# value-graph

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  GEMINI.md  README.md  ValueGraph_BUILD_PLAN.md  ValueGraph_PRD_v5.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
admin/: README.md  pyproject.toml
admin/adminpanel/: clients.py  config.py  db_browser.py  logging_config.py  main.py  state.py  views.py
admin/adminpanel/templates/: browse.html  dashboard.html  login.html  style.html
admin/tests/: test_admin.py
agent-engine/: README.md
agent-engine/agentengine/: agent.py  anchors.py  annotations.py  artifacts.py  chat.py  citations.py  client.py  config.py  enrichment.py  evidence.py  figures.py  freshness.py  gemini_io.py  guardrails.py  intake.py  kpi.py  (+6 more)
control-plane/: .gitignore  README.md  pyproject.toml
datasets/: .env.example  README.md  docker-compose.yml  openapi.json  pyproject.toml
datasets/app/: cache.py  config.py  errors.py  logging_config.py  main.py  pipelines.py  queue.py  scheduler.py  selftest.py  symbols.py
datasets/app/connectors/: catalog.py  catalog_policies.py  manifest.py
datasets/app/providers/: _parse_utils.py  base.py  document_ai.py  macro_indicators.py  news.py  registry.py  sec_decks.py  transcripts.py
datasets/app/providers/kr/: dart_document.py  ecos.py  kis.py  opendart.py  opendart_parse.py
datasets/app/providers/us/: bls.py  dbnomics.py  fmp.py  fred.py  gurus.py  macro_auto.py  sec_edgar.py  sec_edgar_concepts.py  stooq.py  yahoo.py
datasets/app/routers/: _common.py  admin.py  backtest.py  catalog.py  company.py  corporate_actions.py  earnings.py  evidence.py  filings.py  financials.py  fmp.py  funds.py  gurus.py  institutional.py  kis.py  macro.py  market.py  metrics.py  prices.py  scaffold.py  search.py  technical.py  valuation.py
datasets/app/store/: _ingest_helpers.py  backtest.py  commodities.py  corp_actions_ingest.py  cross_asset.py  db.py  deck_ingest.py  evidence_docs.py  evidence_render.py  filing_html.py  filing_ingest.py  filing_refs.py  ingest.py  jobs.py  kr_earnings_ingest.py  locations_ingest.py  models.py  news_ingest.py  prices_ingest.py  provenance.py  quant.py  screener.py  sectors.py  semiconductor.py  source_html.py  technical.py  themes.py  transcript_html.py  transcript_ingest.py  universes.py  upstream_health.py  valuation.py
datasets/scripts/: bulk_load.py  ingest.py  smoke.sh
datasets/tests/: test_dart_document.py  test_datasets.py  test_decks.py  test_kr_earnings.py  test_source_html.py  test_transcripts.py
docs/: ARCHITECTURE.md  DATA_EXPANSION.md  FRONTEND_REFACTOR_PLAN.md  IDEA.md  REFACTOR_PLAN.md  ROADMAP.md
eval/: README.md  RUBRIC.md  run_eval.py  scenarios.py
infra/: .gitkeep  docker-compose.yml  smoke_test.sh
mcp/: Dockerfile  README.md
platform/: .env.example  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml
platform/admin/: Dockerfile  README.md  pyproject.toml
platform/admin/adminpanel/: config.py  main.py
platform/admin/adminpanel/templates/: head.html  login.html  row.html  search.html  style.html
platform/admin/tests/: test_admin.py
platform/agent-engine/: .dockerignore  Dockerfile  pyproject.toml
platform/agent-engine/agentengine/: agent.py  chat.py  citations.py  client.py  config.py  evidence.py  figures.py  gemini_io.py  guardrails.py  main.py  models.py  planner.py  provenance.py
platform/agent-engine/tests/: test_agent.py
platform/control-plane/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
platform/control-plane/controlplane/: admin.py  catalog_index.py  config.py  gateway.py  main.py  models.py  ratelimit.py
platform/control-plane/tests/: test_controlplane.py
platform/datasets/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
platform/datasets/app/: config.py  deps.py  errors.py  filters.py  http.py  main.py  scheduler.py
platform/datasets/app/connectors/: catalog.py  catalog_policies.py  manifest.py
platform/datasets/app/models/: generated.py
platform/datasets/app/providers/: base.py  search_util.py
platform/datasets/app/providers/kr/: krx.py  opendart.py  opendart_concepts.py
platform/datasets/app/providers/us/: fred.py  ixbrl.py  sec_edgar.py  sec_edgar_xbrl.py  yahoo.py
platform/datasets/app/routers/: admin.py  catalog.py  company.py  earnings.py  filings.py  financials.py  insider.py  metrics.py  news.py  prices.py  scaffold.py
platform/datasets/app/store/: bulk.py  db.py  ingest.py  jobs.py  locations_ingest.py  metrics_history.py  models.py  screener.py  universes.py
platform/datasets/tests/: test_datasets.py  test_ixbrl.py
platform/mcp/: README.md  pyproject.toml
platform/mcp/mcpserver/: config.py  tools.py
platform/mcp/tests/: test_mcp.py
platform/rag/: Dockerfile  README.md  pyproject.toml
platform/rag/rag/: chunk.py  config.py  ingest.py  main.py  models.py  store.py
platform/rag/tests/: test_rag.py  test_rag_semantic.py
platform/renderer/: README.md  pyproject.toml
platform/renderer/app/: render.py
postgres-init/: 01-create-databases.sql
rag/: Dockerfile  README.md  pyproject.toml
rag/rag/: config.py  embeddings.py  ingest.py  logging_config.py  main.py  models.py  rerank.py  search.py  store.py
rag/tests/: test_rag.py  test_rag_semantic.py
renderer/: Dockerfile
scripts/: coverage.sh  e2e.sh  e2e_functional.sh  e2e_live.sh  test_all.sh
services/: __init__.py
studio-api/: Dockerfile  README.md  pyproject.toml
studio-api/studioapi/: agents.py  alerts.py  alerts_render.py  board.py  chat.py  config.py  db.py  demo_template.py  evidence.py  financials.py  groups.py  kpis.py  logging_config.py  main.py  models.py  orm_helpers.py  portfolios.py  prices.py  prompts.py  provision.py  runs.py  scheduler.py  search.py  templates.py
studio-api/studioapi/channels/: __init__.py  _http.py  email.py  kakao.py  slack.py  telegram.py
studio-api/tests/: conftest.py  test_alerts.py  test_studio.py
web/: README.md  auth.ts  package-lock.json  package.json
(+419 files in other folders)
