[project]
name = "valuegraph"
version = "0.0.0"
description = "ValueGraph — monorepo Python services (engine, pipeline)."
requires-python = ">=3.11"
# The graph-schema package (single source of truth for node/edge types) is a
# workspace member; depending on it makes `import graph_schema` available to the
# services after `uv sync`.
dependencies = ["valuegraph-graph-schema"]

[tool.uv]
# The repo root is a virtual workspace, not an installable package; `uv sync`
# provisions only dependencies and the dev toolchain. Service deps are added in
# later M0 tasks.
package = false

[tool.uv.workspace]
members = ["packages/graph-schema/python"]

[tool.uv.sources]
valuegraph-graph-schema = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "types-jsonschema>=4.18",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["services", "packages/graph-schema/python"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["services", "packages/graph-schema/python/graph_schema"]

[tool.pytest.ini_options]
testpaths = ["services", "packages/graph-schema/python"]
