[project]
name = "valuegraph-admin"
version = "0.1.0"
description = "Admin — operations console: left-nav mission-control + styled CRUD over every service DB."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "itsdangerous>=2.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["adminpanel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
