[project]
name = "valuegraph-datasets"
version = "0.1.0"
description = "US + Korea financial datasets API (KOSPI/KOSDAQ)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "lxml>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pykrx>=1.0.45",
    "procrastinate>=2.0",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    # GCP Document AI Layout Parser — parse 8-K presentation PDFs into faithful, layout-aware RAG
    # chunks (Phase 2). Lazy-imported + opt-in (needs a processor); absent → the deck feature is dark.
    "google-cloud-documentai>=2.20",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "datamodel-code-generator>=0.25",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Starlette's TestClient nags about httpx2; harmless, silence the noise.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
