[project]
name = "valuegraph-rag"
version = "0.1.0"
description = "Provenance-first RAG service — Gemini embeddings + provenance-tracked retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "google-genai>=1.0",            # Gemini embeddings (gemini-embedding-2) — the only embedder
]

[project.optional-dependencies]
# Vertex AI Ranking API (optional reranker; embeddings work via the Gemini API with GOOGLE_API_KEY)
gcp = ["google-cloud-discoveryengine>=0.13"]
# pgvector store
pg = ["psycopg[binary]>=3.1", "pgvector>=0.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Starlette's TestClient nags about httpx2; harmless, silence the noise.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
