[project]
name = "valuegraph-agent-engine"
version = "0.1.0"
description = "Agent Engine: run agents over a tenant's activated connectors + RAG, via the gateway, with provenance + guardrails."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# real LLM planner (Gemini API or Vertex) — the stub planner needs no key
gemini = ["google-genai>=0.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentengine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
