[project]
name = "valuegraph-control-plane"
version = "0.1.0"
description = "Control plane for the investment-agent data platform: tenancy, entitlements, metering, gateway."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["controlplane"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Starlette's TestClient nags about httpx2; harmless, silence the noise.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
