[project]
name = "valuegraph-datasets"
version = "0.1.0"
description = "US + Korea financial datasets API (a financialdatasets.ai-compatible service extended to KOSPI/KOSDAQ)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pykrx>=1.0.45",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "datamodel-code-generator>=0.25",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
