[project]
name = "valuegraph-mcp"
version = "0.1.0"
description = "MCP server exposing platform data connectors as tenant-scoped tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpserver"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
